# frayan-for-a3ff-workout-meal-p

./: .env.example  .gitignore  .plan  .prettierignore  README.md  package-lock.json  package.json
backend/: README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  plans.py
backend/app/core/: config.py  errors.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  exercise.py  food.py
backend/app/repositories/: __init__.py  exercises.py  foods.py
backend/app/schemas/: __init__.py  errors.py  plan.py  plan_responses.py
backend/app/seeds/: __init__.py  exercises.json  foods.json  seed_exercises.py  seed_foods.py
backend/app/services/: __init__.py  baseline.py  budget.py  meals.py  workout.py
backend/migrations/: README  env.py
backend/migrations/versions/: 20260720_0001_initial_empty.py  20260720_0002_create_exercises.py  20260720_0003_create_food_items.py
frontend/: eslint.config.js  index.html  package.json  playwright.config.ts  tailwind.config.js
frontend/e2e/: full-flow.spec.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: client.ts  planHooks.ts  queryClient.ts  types.ts
frontend/src/components/: BudgetBreakdownCard.tsx  InputPanel.tsx  MealPrepCard.tsx  SafetyNotices.tsx  WorkoutPlanCard.tsx
frontend/src/layout/: DashboardLayout.tsx
frontend/src/routes/: DashboardPage.tsx
