[project]
name = "frayan-for-a3ff-workout-meal-p-backend"
version = "0.1.0"
description = "FastAPI backend service"
requires-python = ">=3.11"
dependencies = [
  "alembic==1.14.1",
  "fastapi==0.116.1",
  "psycopg[binary]==3.2.4",
  "pydantic-settings==2.8.1",
  "SQLAlchemy==2.0.37",
  "uvicorn[standard]==0.35.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
